--- a/.env
+++ b/.env
@@ -1,34 +1,20 @@
+# 1/ Project env
 WORDPRESS_VERSION=latest
 PROJECT_NAME=wordpress_dev
+DOMAIN=wordpress.test
 WORDPRESS_TITLE="My docker WordPress"
-WORDPRESS_ADMIN_USER=admin
-WORDPRESS_ADMIN_EMAIL=admin@wordpressdev.com
-WORDPRESS_ADMIN_PWD=PwdPasswordAdmin1!  # Use strong password
+WORDPRESS_ADMIN_USER=wapuu
+WORDPRESS_ADMIN_EMAIL=email@wordpressdev.com
+WORDPRESS_ADMIN_PWD=Password123  # Use strong password
 
+# 2/ WordPress env
+WP_DEBUG=true
+WP_LOG=true
+
+# 3/ Database env
 DB_NAME=wordpress
 DB_USER=root
 DB_PASSWORD=root
-DB_HOST=mysql
+DB_HOST=mysql # Default to "db" as the database host (matches your Docker Compose service name)
 TABLE_PREFIX=wpd_
-
 MYSQL_ROOT_PASSWORD=root
-
-# DB_CHARSET=
-# DB_COLLOCATE=
-
-
-# AUTH_KEY
-# SECURE_AUTH_KEY
-# LOGGED_IN_KEY
-# NONCE_KEY
-# AUTH_SALT
-# SECURE_AUTH_SALT
-# LOGGED_IN_SALT
-# NONCE_SALT
-
-WP_DEBUG=true
-WP_DEBUG_LOG=true
-
-WP_CONFIG_EXTRA="define('WP_DEBUG_LOG', true);"
-
-
